<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JPassword Manager</string>
    <string name="login_title">Manage Passwords</string>
    <string name="account_info">Account Information</string>
    <string name="login_here">Login</string>
    <string name="username">Username</string>
    <string name="resetlogin">Logins reset session </string>
    <string name="reset">Reset</string>
    <string name="reset_title">Reset your logins information</string>
    <string name="reset_all">Reset All</string>
    <string name="reset_current">Confirm current password</string>
    <string name="reset_newpassword">New password</string>
    <string name="reset_confirm">Confirm new password</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_username">Reset username</string>
    <string name="reset_newusername">New username</string>
    <string name="password">Password</string>
    <string name="search_label">Password</string>
    <string name="search_hint">Password</string>
    <string name="new_event">New event</string>
    <string name="new_financial">New financial</string>
    <string name="login">Sign in</string>
    <string name="etypeButton">Select event type</string>
    <string name="no">No</string>
    <string name="finishButton">Finish</string>
    <string name="fInfo">Financial Information</string>
    <string name="eInfo">Event Information</string>
    <string name="all">All</string>
    <string name="fpasswordConfirm">Confirm your PIN</string>
    <string name="yes">Yes</string>
    <string name= "etype">Event type</string>
    <string name= "morethanOneDay"> More than one day</string>
    <string name="chbox">Show my username</string>
    <string name="pg">P-Generator</string>
    <string name="action_settings">Settings</string>
    <string name="new_user_header">User Registration</string>
    <string name="new_user">New user</string>
    <string name="f_password">Forgot Password?</string>
    <string name="add_account">Add account</string>
    <string name="add_birth_date">Add date of birth </string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="about">About app</string>
    <string name="cancel_button">Cancel</string>
    <string name="new_account">New Account</string>
    <string name="search_title">Search</string>
    <string name="manager">List of accounts</string>
    <string name="no_task">No Account</string>
    <string name="full_name">Full name</string>
    <string name="new_username">JManager username</string>
    <string name="new_password">JManager password</string>
    <string name="confirm_password">Confirm JManager password</string>
    <string name="new_user_title">Provide required Information to register</string>
    <string name="submit_button">Register</string>
    <string name="back_button">Back</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Save Changes</string>
    <string name="setting">This will help to reset password</string>
    <string name="back_to_list">Back to Accounts List</string>
    <string name="edit_title">Please Edit and Save changes</string>
    <string name="submit_changes">Save Changes</string>
    <string name="add_confidencials">Add confidentials</string>
    <string name="generate">Generate password of your choice, if it suites your need press and hold on the password to copy it</string>
    <string name="withNumbers">With Numerics</string>
    <string name="upperCase">With uppercase(A-Z)</string>
    <string name="lowerCase">With lowercase(a-z)</string>
    <string name="character">With characters</string>
    <string name="textView3">Password displays here</string>
    <string name="generateButton">Generate Password</string>
    <string name="passLength">Select length of password</string>
    <string name="event">Event</string>
    <string name="financial">Financial</string>
    <string name="faddFinancial">Add Financial Info</string>
    <string name="addEvent">Add Event</string>
    <string name="fcansel">Cancel </string>
    <string name="fname">Financial name</string>
    <string name="fvisa">Credit card number/Visa</string>
    <string name="fnumber">Financial number </string>
    <string name="fmoreInfo">More Information</string>
    <string name="fpassword">PIN or Password</string>
    <string name="ftype">Financial type</string>
    <string name="fsecq1">Security question 1</string>
    <string name="fsecq2">Security question 2</string>
    <string name="fanswer1">Answer 1</string>
    <string name="fanswer2">Answer 2</string>
    <string name="eventtype">Event Type</string>
    <string name="eventName">Event Name</string>
    <string name="eventDiscription">Discription</string>
    <string name="eventstart">Starting date</string>
    <string name="eventend">Ending date</string>
    <string name="eventsingle">Event date</string>

    <string name="financialtype">Financial type</string>
    <string name="financialname">Financial Name</string>
    <string name="financialnumber">Financial Account Number</string>
    <string name="financialvisa">Visa/Credit</string>
    <string name="financialpin">Password/PIN</string>
    <string name="financialsec1">Security qn 1</string>
    <string name="financialsec2">Security qn 2</string>
    <string name="financialans1">Security ans 1</string>
    <string name="financialans2">Security ans 2</string>
    <string name="financialupd">Save Changes</string>
    <string name="add_title">Please fill in the required information</string>

    <string name="account_name">Account Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="show_pass">Show Password</string>
    <string name="title_for_acc">Domain Name</string>
    <string name="phone">Phone Number</string>
    <string name="toolbar_title">Toolbar Title</string>

</resources>
