<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
     <item android:id="@+id/search"
        android:title="@string/search_title"
        android:orderInCategory="1"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" 
        />
    
    <item
        android:id="@+id/generatepass"
        android:orderInCategory="2"
        android:title="@string/pg"
        android:icon="@drawable/passg"
        app:showAsAction="always"
       />
    <item
        android:id="@+id/new_account"
        android:orderInCategory="3"
        android:title="@string/new_account"
        android:icon="@drawable/new_account"
        android:showAsAction="ifRoom"
       />
    <item
        android:id="@+id/pass_home"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/_help"
        android:orderInCategory="5"
        android:title="@string/help" 
        android:showAsAction="never"
        />
    
   <item
        android:id="@+id/about"
        android:orderInCategory="6"
        android:title="@string/about"
         android:showAsAction="never"
        />
     
   <item
        android:id="@+id/reset"
        android:orderInCategory="7"
        android:title="@string/reset"
         android:showAsAction="never"
        />
 
     

</menu>
