<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jerotoma.passwordmanager.com.LoginMainActivity" >
    
    <item
        android:id="@+id/help"
        android:orderInCategory="1"
        android:title="@string/help"
        android:showAsAction="never"/>
     <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
     <item
        android:id="@+id/new_user"
        android:orderInCategory="3"
        android:title="@string/new_user"
        android:visible="true"
        app:showAsAction="never"/>
     <item
        android:id="@+id/reset"
        android:orderInCategory="3"
        android:title="@string/reset"
        android:visible="false"
        app:showAsAction="never"/>
     <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        android:showAsAction="never"/>
     
    

</menu>
