<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        
        />
    
    <RadioGroup
        android:id="@+id/groupradio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        >
    <RadioButton
        android:id="@+id/resetAllRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/reset_all"
        android:checked="true"
        />
    <RadioButton
        android:id="@+id/resetUsernameRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
         android:text="@string/reset_username"
        />
   
    <RadioButton
        android:id="@+id/resetPasswordRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/reset_password"
        />
   </RadioGroup>
    <EditText
        android:id="@+id/reset_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:hint="@string/reset_current"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/reset_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:hint="@string/reset_newusername"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:hint="@string/reset_newpassword"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/reset_passconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:hint="@string/reset_confirm"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/reset_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginTop="30dip"
        android:clickable="true"
        android:layout_marginEnd="8dip"
        android:textAllCaps="false"
        android:layout_marginRight="8dip"
        android:text="@string/reset"
       android:textSize="24sp"
        android:height="60dip"
        />

</LinearLayout>
