<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        />
    <TextView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_title"
        android:layout_marginTop="70dip"
        android:textSize="18sp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        />
    <EditText 
        android:id="@+id/account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_view"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:hint="@string/account_name"
        />
    <EditText 
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_name"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:hint="@string/username"
        />
    <EditText 
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:width="190dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="15dip"
        android:layout_marginStart="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:hint="@string/password"
        />
     <ImageButton
        android:id="@+id/gpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_toEndOf="@id/password"
        android:layout_toRightOf="@id/password"
        android:layout_marginTop="2dip"
        android:layout_marginEnd="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginStart="10dip"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/passg"
         />
    <CheckBox
        android:id="@+id/show_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gpassword"
        android:layout_toEndOf="@id/password"
        android:layout_toRightOf="@id/password"
        android:layout_marginTop="4dip"
        android:layout_marginEnd="10dip"
        android:layout_marginRight="10dip"
         android:layout_marginLeft="5dip"
        android:layout_marginStart="5dip"
        android:hint="@string/show_pass"
        />
 
   
    <EditText 
        android:id="@+id/email_address"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:hint="@string/email_address"
        />
    <EditText 
        android:id="@+id/phone_number"
        android:inputType="phone|number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_address"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:hint="@string/phone_number"
        />
    <Button
        android:id="@+id/addAccount_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below ="@id/phone_number"
        android:layout_marginTop="40dip"
        android:layout_marginStart="10dip"
        android:layout_marginLeft="10dip"
        android:gravity="center"
        android:layout_weight="0.15"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:height="60dp"
        android:text="@string/add_account"
        android:layout_centerHorizontal="true"
        />
 </RelativeLayout>
 </ScrollView>
