<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

  <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
   <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    
  <EditText
        android:id="@+id/new_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:hint="@string/new_username"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/new_user_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:hint="@string/new_password"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/new_user_pass_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:hint="@string/confirm_password"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_marginTop="40dip"
        android:layout_marginStart="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginEnd="10dip"
        android:layout_marginRight="10dip"
        android:gravity="center"
        android:textSize="24sp"
        android:height="60dp"
        android:layout_weight="0.15"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:text="@string/submit_button"
        android:width="150dip"
        />
   </LinearLayout>
    
</ScrollView>
